--- a/data/projects.json
+++ b/data/projects.json
@@ -1,71 +1,142 @@
 [
     {
-        "title": "Agustine",
-        "image_url": "https://i.ibb.co/822psdy/agustine.jpg",
-        "live_web": "https://five-star-hotel-p.web.app/",
-        "git_hub": "https://github.com/itsmiraz/agustine-hotel-",
+        "title": "Shop Now",
+        "image_url": "https://i.ibb.co/ykgTbkN/shop-now.jpg",
+        "live_web": "https://shop-now-8e94f.web.app/",
+        "git_hub":"https://github.com/itsmiraz/shop-now-client",
+        "server":"https://github.com/itsmiraz/shop-now-server",
         "tech": [
             "ReactJS",
+            "React Query",
+            "React Hook Form",
+            "Mongo Db",
+            "Node JS",
+            "Express JS",
+            "Stripe",
+            "Framer Motion",
             "React Router",
             "Tailwind",
             "Firebase",
             "JWT",
             "Daisy UI"
         ],
-        "details": "This is my Most Recent Project.This is Besically a website for a five star hotel.It has different types of feature such as this site is fully responsive.I use mongodb for database.JWT for secure the data."
+        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design","Dedicated Admin Panel"],
+        "details": "Shop Now is a highly customizable E-Commerce website that allows users to create and manage their online stores. The site has a wide variety of features and can be easily customized by the user. This is my Most Recent Project. Shop Now is an E-Commerce website. It took me 2 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post products, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
+        "keyword":"shopNow,e-commerce website,recent project,react"
+    },
+    {
+        "title": "Agustine",
+        "image_url": "https://i.ibb.co/JyQPYvc/agustine.jpg",
+        "live_web": "https://five-star-hotel-p.web.app/",
+        "git_hub":"https://github.com/itsmiraz/agustine-hotel-",
+        "server":"https://github.com/itsmiraz/agustine-hotel-server",
+        "tech": [
+            "ReactJS",
+            "React Query",
+            "React Hook Form",
+            "Mongo Db",
+            "Node JS",
+            "Express JS",
+            "Stripe",
+            "Aso Animation",
+            "React Router",
+            "Tailwind",
+            "Firebase",
+            "JWT",
+            "Daisy UI"
+        ],
+        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design","Dedicated Admin Panel"],
+        "details": "Agustine is a highly customizable E-Commerce website for five start hotel that allows users to create and manage their online business . The site has a wide variety of features and can be easily customized by the admin. This is my Most Recent Project . It took me 2 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post new rooms, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
+        "keyword":"agustine,hotel website,recent project,react"
+    },
+    {
+        "title": "Bike Hut",
+        "image_url": "https://i.ibb.co/Sdd50v8/bike-hut.jpg",
+        "live_web": "https://bikelagbe-99f21.web.app/",
+        "git_hub":"https://github.com/itsmiraz/bike-hut-client-12",
+        "server":"https://github.com/itsmiraz/bike-hut-server-12",
+        "tech": [
+            "ReactJS",
+            "React Query",
+            "React Hook Form",
+            "Mongo Db",
+            "Node JS",
+            "Express JS",
+            "Stripe",
+            "Aso Animation",
+            "React Router",
+            "Tailwind",
+            "Firebase",
+            "JWT",
+            "Daisy UI"
+        ],
+        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design","Dedicated Admin Panel"],
+        "details": "Bike hut is a highly customizable E-Commerce website that allows users to sell and buy bikes. The site has a wide variety of features and can be easily customized by the user. This is my Most Recent Project. Bike is an E-Commerce website for bike resale and buying. It took me 1 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post products, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
+        "keyword":"bikehut,resale website,recent project,react"
+    },
+    {
+        "title": "Rober Json",
+        "image_url": "https://i.ibb.co/HT449c2/robertjson.jpg",
+        "live_web": "https://services-ass-11.web.app/",
+        "git_hub":"https://github.com/itsmiraz/robert-json-client-11",
+        "server":"https://github.com/itsmiraz/robert-json-server-11",
+        "tech": [
+            "ReactJS",
+            "Mongo Db",
+            "Node JS",
+            "Express JS",
+            "Aso Animation",
+            "React Router",
+            "Tailwind",
+            "Firebase",
+            "JWT",
+            "Daisy UI"
+        ],
+        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design","Dedicated Admin Panel"],
+        "details": "Robert Json is a site for a Photographer who can show case his services and user can book them . The site has a wide variety of features and can be easily customized by the admin . It took me 1 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post new rooms, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
+        "keyword":"robertJson,resale website,recent project,react"
+    },
+    {
+        "title": "Doctors Portal",
+        "image_url": "https://i.ibb.co/qW42CCQ/doctors-portal.jpg",
+        "live_web": "https://doctors-portal-21807.web.app/",
+        "git_hub":"https://github.com/itsmiraz/doctors-portal",
+        "server":"https://github.com/itsmiraz/doctors-portal-server",
+        "tech": [
+            "ReactJS",
+            "Mongo Db",
+            "Node JS",
+            "Express JS",
+            "Aso Animation",
+            "React Router",
+            "Tailwind",
+            "Firebase",
+            "JWT",
+            "Daisy UI"
+        ],
+        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design","Dedicated Admin Panel"],
+        "details": "Doctors Portal is a site for a Doctor where anyone can take appointment and the patient take appointment .The admin can add doctors and do so much.  The site has a wide variety of features and can be easily customized by the admin . It took me 1 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post new rooms, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
+        "keyword":"doctor portal,recent project,react"
     },
     {
         "title": "Learning Hero",
+        "image_url": "https://i.ibb.co/2tHHmQ2/learning-hero.jpg",
         "live_web": "https://learning-hero-ass.web.app/",
-        "git_hub": "https://github.com/itsmiraz",
-        "image_url": "https://i.ibb.co/kXCTcnm/Learning-Hero.jpg",
+        "git_hub":"https://github.com/itsmiraz/learning-hero-client-10",
+        "server":"https://github.com/itsmiraz/learning-hero-server-10",
         "tech": [
             "ReactJS",
+            "Mongo Db",
+            "Node JS",
+            "Express JS",
             "React Router",
             "Tailwind",
             "Firebase",
             "Daisy UI"
         ],
-        "details": "This is Besically a website for E-Learning.It has different types of feature such as this site is fully responsive.I use mongodb for database.JWT for secure the data."
-    },
-    {
-        "title": "Dev-Quiz",
-        "image_url": "https://i.ibb.co/C8Ghh6c/dev-quiz.jpg",
-        "live_web": "https://dev-quiz-miraj.netlify.app/",
-        "git_hub": "https://github.com/itsmiraz",
-        "tech": [
-            "ReactJS",
-            "React Router",
-            "Tailwind",
-            "Firebase",
-            "Daisy UI"
-        ],
-        "details": "This is Besically a Quiz website.It has different types of feature such as this site is fully responsive.I use mongodb for database.JWT for secure the data."
-    },
-    {
-        "image_url": "https://i.ibb.co/0cXmyQc/dragon-news.jpg",
-        "title": "Dragon News",
-        "live_web": "https://dragon-news-714ab.web.app/",
-        "git_hub": "https://github.com/itsmiraz",
-        "tech": [
-            "ReactJS",
-            "React Router",
-            "Bootstrap",
-            "Firebase"
-        ],
-        "details": "This is News Website.This site has different types of of feature such as this site is fully responsive.I use mongodb for database.JWT for secure the data."
-    },
-    {
-        "image_url": "https://i.ibb.co/PmWGcBw/uni-tech.jpg",
-        "title": "UNI-TECH",
-        "live_web": "https://unitech-landing-page.netlify.app/",
-        "git_hub": "https://github.com/itsmiraz/uni-tech-a",
-        "tech": [
-            "HTML5",
-            "CSS",
-            "Bootstrap",
-            "Javascript"
-        ],
-        "details": "This is News Website.This site has different types of of feature such as this site is fully responsive.I use mongodb for database.JWT for secure the data."
+        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design"],
+        "details": "Learning Hero is a highly customizable E-Commerce website for E-learning. The site has a wide variety of features and can be easily customized by the admin. This is my Most Recent Project . It took me 1 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post new rooms, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
+        "keyword":"learingin Hero,recent project,react"
     }
+
 ]
