--- a/data/projects.json
+++ b/data/projects.json
@@ -3,8 +3,13 @@
         "title": "Shop Now",
         "image_url": "https://i.ibb.co/ykgTbkN/shop-now.jpg",
         "live_web": "https://shop-now-8e94f.web.app/",
-        "git_hub":"https://github.com/itsmiraz/shop-now-client",
-        "server":"https://github.com/itsmiraz/shop-now-server",
+        "git_hub": "https://github.com/itsmiraz/shop-now-client",
+        "server": "https://github.com/itsmiraz/shop-now-server",
+        "screenshots": [
+            "https://i.ibb.co/qCC8Jzh/shop-now-1.png",
+            "https://i.ibb.co/sjd1rS8/shop-now-8e94f-web-app-2.png",
+            "https://i.ibb.co/CQ9HTLz/shop-now-8e94f-web-app-dashboard-adminpanel.png"
+        ],
         "tech": [
             "ReactJS",
             "React Query",
@@ -20,16 +25,27 @@
             "JWT",
             "Daisy UI"
         ],
-        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design","Dedicated Admin Panel"],
+        "features": [
+            "Fully Responsive for Mobile Devices",
+            "Secured By JWT ",
+            " Stripe Payment System",
+            "Modern Design",
+            "Dedicated Admin Panel"
+        ],
         "details": "Shop Now is a highly customizable E-Commerce website that allows users to create and manage their online stores. The site has a wide variety of features and can be easily customized by the user. This is my Most Recent Project. Shop Now is an E-Commerce website. It took me 2 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post products, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
-        "keyword":"shopNow,e-commerce website,recent project,react"
+        "keyword": "shopNow,e-commerce website,recent project,react"
     },
     {
         "title": "Agustine",
         "image_url": "https://i.ibb.co/JyQPYvc/agustine.jpg",
         "live_web": "https://five-star-hotel-p.web.app/",
-        "git_hub":"https://github.com/itsmiraz/agustine-hotel-",
-        "server":"https://github.com/itsmiraz/agustine-hotel-server",
+        "git_hub": "https://github.com/itsmiraz/agustine-hotel-",
+        "server": "https://github.com/itsmiraz/agustine-hotel-server",
+        "screenshots": [
+            "https://i.ibb.co/SDTQM03/localhost-3001-2.png",
+            "https://i.ibb.co/0ftdHgR/five-star-hotel-p-web-app-dashboard-booking.png",
+            "https://i.ibb.co/mSf7jjH/localhost-3001-3.png"
+        ],
         "tech": [
             "ReactJS",
             "React Query",
@@ -45,16 +61,27 @@
             "JWT",
             "Daisy UI"
         ],
-        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design","Dedicated Admin Panel"],
+        "features": [
+            "Fully Responsive for Mobile Devices",
+            "Secured By JWT ",
+            " Stripe Payment System",
+            "Modern Design",
+            "Dedicated Admin Panel"
+        ],
         "details": "Agustine is a highly customizable E-Commerce website for five start hotel that allows users to create and manage their online business . The site has a wide variety of features and can be easily customized by the admin. This is my Most Recent Project . It took me 2 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post new rooms, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
-        "keyword":"agustine,hotel website,recent project,react"
+        "keyword": "agustine,hotel website,recent project,react"
     },
     {
         "title": "Bike Hut",
         "image_url": "https://i.ibb.co/Sdd50v8/bike-hut.jpg",
         "live_web": "https://bikelagbe-99f21.web.app/",
-        "git_hub":"https://github.com/itsmiraz/bike-hut-client-12",
-        "server":"https://github.com/itsmiraz/bike-hut-server-12",
+        "git_hub": "https://github.com/itsmiraz/bike-hut-client-12",
+        "server": "https://github.com/itsmiraz/bike-hut-server-12",
+        "screenshots": [
+            "https://i.ibb.co/ChyfJhy/bikelagbe-99f21-web-app.png",
+            "https://i.ibb.co/LxQBxKG/bikelagbe-99f21-web-app-dashboard-addaproduct-1.png",
+            "https://i.ibb.co/Qkz6nyK/bikelagbe-99f21-web-app-dashboard-addaproduct-4.png"
+        ],
         "tech": [
             "ReactJS",
             "React Query",
@@ -70,16 +97,27 @@
             "JWT",
             "Daisy UI"
         ],
-        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design","Dedicated Admin Panel"],
+        "features": [
+            "Fully Responsive for Mobile Devices",
+            "Secured By JWT ",
+            " Stripe Payment System",
+            "Modern Design",
+            "Dedicated Admin Panel"
+        ],
         "details": "Bike hut is a highly customizable E-Commerce website that allows users to sell and buy bikes. The site has a wide variety of features and can be easily customized by the user. This is my Most Recent Project. Bike is an E-Commerce website for bike resale and buying. It took me 1 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post products, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
-        "keyword":"bikehut,resale website,recent project,react"
+        "keyword": "bikehut,resale website,recent project,react"
     },
     {
         "title": "Rober Json",
         "image_url": "https://i.ibb.co/HT449c2/robertjson.jpg",
         "live_web": "https://services-ass-11.web.app/",
-        "git_hub":"https://github.com/itsmiraz/robert-json-client-11",
-        "server":"https://github.com/itsmiraz/robert-json-server-11",
+        "git_hub": "https://github.com/itsmiraz/robert-json-client-11",
+        "server": "https://github.com/itsmiraz/robert-json-server-11",
+        "screenshots": [
+            "https://i.ibb.co/YQ8nKTq/localhost-3000.png",
+            "https://i.ibb.co/tmBFYrS/localhost-3000-1.png",
+            "https://i.ibb.co/wQRTQw8/services-ass-11-web-app-service-636c81eb3e97d5d7a432e5f9.png"
+        ],
         "tech": [
             "ReactJS",
             "Mongo Db",
@@ -92,16 +130,27 @@
             "JWT",
             "Daisy UI"
         ],
-        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design","Dedicated Admin Panel"],
+        "features": [
+            "Fully Responsive for Mobile Devices",
+            "Secured By JWT ",
+            " Stripe Payment System",
+            "Modern Design",
+            "Dedicated Admin Panel"
+        ],
         "details": "Robert Json is a site for a Photographer who can show case his services and user can book them . The site has a wide variety of features and can be easily customized by the admin . It took me 1 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post new rooms, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
-        "keyword":"robertJson,resale website,recent project,react"
+        "keyword": "robertJson,resale website,recent project,react"
     },
     {
         "title": "Doctors Portal",
         "image_url": "https://i.ibb.co/qW42CCQ/doctors-portal.jpg",
         "live_web": "https://doctors-portal-21807.web.app/",
-        "git_hub":"https://github.com/itsmiraz/doctors-portal",
-        "server":"https://github.com/itsmiraz/doctors-portal-server",
+        "git_hub": "https://github.com/itsmiraz/doctors-portal",
+        "server": "https://github.com/itsmiraz/doctors-portal-server",
+        "screenshots": [
+            "https://i.ibb.co/9THxfQZ/doctors-portal-21807-web-app.png",
+            "https://i.ibb.co/s14qByR/doctors-portal-21807-web-app-1.png",
+            "https://i.ibb.co/BwnJg5B/doctors-portal-21807-web-app-dashboard.png"
+        ],
         "tech": [
             "ReactJS",
             "Mongo Db",
@@ -114,16 +163,22 @@
             "JWT",
             "Daisy UI"
         ],
-        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design","Dedicated Admin Panel"],
+        "features": [
+            "Fully Responsive for Mobile Devices",
+            "Secured By JWT ",
+            " Stripe Payment System",
+            "Modern Design",
+            "Dedicated Admin Panel"
+        ],
         "details": "Doctors Portal is a site for a Doctor where anyone can take appointment and the patient take appointment .The admin can add doctors and do so much.  The site has a wide variety of features and can be easily customized by the admin . It took me 1 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post new rooms, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
-        "keyword":"doctor portal,recent project,react"
+        "keyword": "doctor portal,recent project,react"
     },
     {
         "title": "Learning Hero",
         "image_url": "https://i.ibb.co/2tHHmQ2/learning-hero.jpg",
         "live_web": "https://learning-hero-ass.web.app/",
-        "git_hub":"https://github.com/itsmiraz/learning-hero-client-10",
-        "server":"https://github.com/itsmiraz/learning-hero-server-10",
+        "git_hub": "https://github.com/itsmiraz/learning-hero-client-10",
+        "server": "https://github.com/itsmiraz/learning-hero-server-10",
         "tech": [
             "ReactJS",
             "Mongo Db",
@@ -134,9 +189,18 @@
             "Firebase",
             "Daisy UI"
         ],
-        "features":["Fully Responsive for Mobile Devices","Secured By JWT "," Stripe Payment System","Modern Design"],
+        "screenshots": [
+            "https://i.ibb.co/wws6g1w/learning-hero-ass-web-app.png",
+            "https://i.ibb.co/Ct49dDs/learning-hero-ass-web-app-1.png",
+            "https://i.ibb.co/XzYmvsM/learning-hero-ass-web-app-blog.png"
+        ],
+        "features": [
+            "Fully Responsive for Mobile Devices",
+            "Secured By JWT ",
+            " Stripe Payment System",
+            "Modern Design"
+        ],
         "details": "Learning Hero is a highly customizable E-Commerce website for E-learning. The site has a wide variety of features and can be easily customized by the admin. This is my Most Recent Project . It took me 1 weeks to complete the full site. I am still upgrading this site day by day. It has different types of features such as this site being fully responsive. I use MongoDB for the database. JWT for securing the data. This site has a dedicated Admin panel and Control panel where the admin can easily control the whole website. The admin can post new rooms, delete users, Make admin or moderator, etc. This site has many features but one of my favorite features is the User Experience. Because I took soo much time on the design and also the User Experience. I hope you like the website if you like the site feel free to send me a message on the contact form I will really appreciate that.",
-        "keyword":"learingin Hero,recent project,react"
+        "keyword": "learingin Hero,recent project,react"
     }
-
 ]
